--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
 
         <div class="buttons">
 
-          <input type="submit" id="send" value="Entrar" >
+          <input type="submit" id="send" value="Entrar" href="index.html">
         </div>
 
         <div class="account"> <p><a href="register.html"><span style=color:#00669F;>¿No tienes una cuenta?</span> Registrarme</a></p>
