Agregue href a boton 'send'

--- a/register.html
+++ b/register.html
@@ -53,7 +53,7 @@
         <div class="buttons">
           <input type="reset" id="reset" value="Resetear">
 
-          <input type="submit" id="send" value="Entrar">
+          <input type="submit" id="send" value="Entrar" href="index.html">
         </div>
 
         <div class="account">
