--- a/register.html
+++ b/register.html
@@ -53,7 +53,7 @@
         <div class="buttons">
           <input type="reset" id="reset" value="Resetear">
 
-          <input type="submit" id="send" value="Entrar" href="index.html">
+          <a id="send" href="index.html">Entrar</a>
         </div>
 
         <div class="account">
