Cambie text-decoration del <a> en Login.html

--- a/register.html
+++ b/register.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="account">
-          <p><a href="login.html"><span style=color:#00669F;>¿Ya tenés una cuenta?</span> Ingresá</a></p>
+          <p><a href="login.html"><span style=color:#00669F>¿Ya tenés una cuenta?</span> Ingresá</a></p>
         </div>
 
       </form>
