Agrego funcion en boton + del Index

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       </div>
     </section>
 
-    <!-- <div class="button">
-      +
-    </div> -->
+    <a href="./add.html" class="button">+</a>
+  
+    
 
 
   </main>
