Cambie apariencia add.html en field (padding), footer (no-fixed) y form-bg (margin 1% auto 5%)

--- a/add.html
+++ b/add.html
@@ -1,4 +1,4 @@
-<!--https://www.figma.com/file/9XZ12ORXQuvMNg3ydKQtFo/Formulario-ll?node-id=48%3A147-->
+<!-- https://www.figma.com/file/9XZ12ORXQuvMNg3ydKQtFo/Formulario-ll?node-id=842%3A2 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -49,8 +49,9 @@
 
             <label for="date" class="field">*Fecha</label>
             <input type="date" name="date" id="date" tabindex="3">
-
-            <input type="textarea" placeholder="Descripcion" style="height: 250px; margin-top: 15%;" tabindex="5" class="field">
+            
+            <textarea name="" id="" cols="30" rows="10" placeholder="Descripcion" tabindex="5" class="description"></textarea>
+            
 
           </div>
 
@@ -68,10 +69,10 @@
             </optgroup>
             </select>
 
-            <p>Agregar Foto</p>
+            <p class="add">Agregar Foto</p>
             <input type="file" name="foto" id="foto" tabindex="4">
 
-            <p>Poderes</p>
+            <p class="add">Poderes </p>
 
             <div>
 
@@ -93,7 +94,7 @@
 
               <hr>
 
-              <p>Tipo de personaje</p>
+              <p class="add">Tipo de personaje</p>
 
               <label for="type" class="checkmark">
               <input type="radio" name='type' value='Heroes' tabindex="10"> Héroe / Heroina
