--- a/login.html
+++ b/login.html
@@ -47,7 +47,8 @@
           <a id="send" href="index.html">Entrar</a>
         </div>
 
-        <div class="account"> <p><a href="register.html"><span style=color:#00669F;>¿No tienes una cuenta?</span> Registrarme</a></p>
+        <div class="account">
+          <p><a href="register.html"><span style=color:#00669F;>¿No tienes una cuenta?</span> Registrarme</a></p>
         </div>
 
         <!-- <label for="comments"></label>
