Arreglo link a index.html en add.html

--- a/add.html
+++ b/add.html
@@ -24,7 +24,7 @@
 
   <header>
     <img src="img/pcVector.png" alt="pcVector" class="pcVector"></img>
-    <h1><a href="/index.html">Nombre Tienda</a></h1>
+    <h1><a href="./index.html">Nombre Tienda</a></h1>
   </header>
 
   <nav class="navigator">
