Formularios full responsive

--- a/register.html
+++ b/register.html
@@ -31,18 +31,14 @@
 
       <form action="/registro.html" method="POST">
 
-        <h2>Registro</h2>
+      <h2>Registro</h2>
 
-        <label for="firstName"></label>
-        <input type="text" id="firstName" placeholder="Emmanuel" name="nombre" required>
+        <input type="text" placeholder="Emmanuel" name="nombre" required>
 
-        <label for="lastName"></label>
-        <input type="text" id="lastName" placeholder="Forster" name="apellido" required>
+        <input type="text" placeholder="Forster" name="apellido" required>
 
-        <label for="password"></label>
-        <input type="password" id="password" placeholder="ejemplo@mail.com" name="password" required>
+        <input type="password" placeholder="ejemplo@mail.com" name="password" required>
 
-        <label for="country"></label>
         <select name="country" required>
           <option> Argentina </option>
           <option> Colombia </option>
@@ -61,6 +57,7 @@
         </div>
 
       </form>
+
     </div>
   </main>
 
