--- a/login.html
+++ b/login.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Karla&family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Karla&family=Roboto&  display=swap"
+    rel="stylesheet">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
 
@@ -35,12 +36,17 @@
       <form action="/index.html" method="POST">
 
         <h2>Login</h2>
+        
+        <div class="everywhere">
 
-        <label for="user"></label>
-        <input type="text" id="user" placeholder="Usuario" name="user" required>
+          <label for="user">
+            <input type="text" id="user" placeholder="Usuario" name="user" required>
+          </label>
 
-        <label for="password"></label>
-        <input type="password" id="password" placeholder="Contraseña" name="password" required>
+          <label for="password">
+            <input type="password" id="password" placeholder="Contraseña" name="password" required>
+          </label>
+        </div>
 
         <div class="buttons">
 
